100% translated, also the RTL crap
git-svn-id: https://svn.viathinksoft.com/svn/spacemission@95 2cb2a291-5fe7-405d-a812-557228769704

--- a/ENU/LevEdit_DRC.rc
+++ b/ENU/LevEdit_DRC.rc
@@ -575,11 +575,11 @@ BEGIN
 	Vcl_Imaging_pnglang_EPngInvalidCRCText,	L"This ""Portable Network Graphics"" image is not valid because it contains invalid pieces of data (crc error)"
 	Vcl_Imaging_pnglang_EPNGInvalidIHDRText,	L"The ""Portable Network Graphics"" image could not be loaded because one of its main piece of data (ihdr) might be corrupted"
 	Vcl_Imaging_pnglang_EPNGMissingMultipleIDATText,	L"This ""Portable Network Graphics"" image is invalid because it has missing image parts."
-	Vcl_Imaging_pnglang_EPNGZLIBErrorText,	L"Die Grafik konnte nicht entpackt werden, weil Teile der komprimierten Daten fehlerhaft sind. \r\nBeschreibung: "
+	Vcl_Imaging_pnglang_EPNGZLIBErrorText,	L"This graphics could not be decompressed because parts of the compressed data is invalid. \r\nDescription: "
 	Vcl_Imaging_pnglang_EPNGInvalidPaletteText,	L"The ""Portable Network Graphics"" image contains an invalid palette."
-	Vcl_Imaging_pnglang_EPNGInvalidFileHeaderText,	L"Die gerade gelesene Datei ist kein g\x00FCltiges PNG-Bild (""Portable Network Graphics""), weil sie keinen g\x00FCltigen Header enth\x00E4lt. Diese Datei ist m\x00F6glicherweise besch\x00E4digt. Versuchen Sie, eine neue Version davon zu bekommen"
+	Vcl_Imaging_pnglang_EPNGInvalidFileHeaderText,	L"The read file is not a valid PNG picture (""Portable Network Graphics""), because it does not contain a valid header. The file is probably corrupt. Please try to receive a newer version of the file."
 	Vcl_Imaging_pnglang_EPNGIHDRNotFirstText,	L"This ""Portable Network Graphics"" image is not supported or it might be invalid.\r\n(IHDR chunk is not the first)"
-	Vcl_Imaging_pnglang_EPNGSizeExceedsText,	L"Dieses PNG-Bild (Portable Network Graphics) wird nicht unterst\x00FCtzt, weil die Breite oder H\x00F6he die maximale Gr\x00F6\x00DFe von 65535 Pixel \x00FCberschreitet."
+	Vcl_Imaging_pnglang_EPNGSizeExceedsText,	L"This PNG image (Portable Network Graphics) cannot be loaded because width or height exceeds 65535 piels."
 	Vcl_Imaging_pnglang_EPNGUnknownPalEntryText,	L"There is no such palette entry."
 	DXConsts_SDirectDrawSurface,	L"Surface"
 	DXConsts_SDirectDrawPrimarySurface,	L"Primary Surface"
@@ -603,9 +603,9 @@ BEGIN
 	Vcl_Consts_SStyleInvalidParameter,	L"Parameter %s must not me nil"
 	Vcl_Consts_SStyleFeatureNotSupported,	L"Function is not supported by this style"
 	Vcl_Consts_SStyleNotRegistered,	L"The style '%s' is not registered"
-	Vcl_Consts_SStyleUnregisterError,	L"Die Registrierung des Systemstils kann nicht aufgehoben werden"
+	Vcl_Consts_SStyleUnregisterError,	L"The registry of the system style cannot be removed"
 	Vcl_Consts_SStyleNotRegisteredNoName,	L"Style not registered"
-	Vcl_Consts_sBeginInvokeNoHandle,	L"BeginInvoke kann nicht ohne \x00FCbergeordnetes Element oder Fenster-Handle aufgerufen werden"
+	Vcl_Consts_sBeginInvokeNoHandle,	L"BeginInvoke cannot be called without superior window or window handle"
 	System_Win_ComConst_SOleError,	L"OLE error %.8x"
 	System_Win_ComConst_SNoMethod,	L"Method '%s' not supported by automation object"
 	System_Win_ComConst_SVarNotObject,	L"Variant does not reference an automation object"
@@ -641,7 +641,7 @@ BEGIN
 	Vcl_Consts_SDockZoneNotFound,	L" - Dock zone not found"
 	Vcl_Consts_SDockZoneHasNoCtl,	L" - Dock zone has no control"
 	Vcl_Consts_SDockZoneVersionConflict,	L"Error loading dock zone from the stream. Expecting version %d, but found %d."
-	Vcl_Consts_SPromptArrayTooShort,	L"L\x00E4nge des Werte-Arrays muss >= der L\x00E4nge des Prompt-Arrays sein"
+	Vcl_Consts_SPromptArrayTooShort,	L"Length of the value array must be >= length of the prompt array"
 	Vcl_Consts_SPromptArrayEmpty,	L"Prompt array must not be empty"
 	Vcl_Consts_SUsername,	L"&Username"
 	Vcl_Consts_SPassword,	L"&Password"
@@ -716,11 +716,11 @@ BEGIN
 	Vcl_Consts_SWindowClass,	L"Error creating window class"
 	Vcl_Consts_SCannotFocus,	L"Cannot focus a disabled or invisible window"
 	Vcl_Consts_SParentRequired,	L"Control '%s' has no parent window"
-	Vcl_Consts_SControlPath,	L". Pfad:\r\n%s"
+	Vcl_Consts_SControlPath,	L". Path:\r\n%s"
 	Vcl_Consts_SParentGivenNotAParent,	L"Parent given is not a parent of '%s'"
 	Vcl_Consts_SMDIChildNotVisible,	L"Cannot hide an MDI Child Form"
 	Vcl_Consts_SVisibleChanged,	L"Cannot change Visible in OnShow or OnHide"
-	Vcl_Consts_SCannotShowModal,	L"Sichtbares Fenster kann nicht in modales ge\x00E4ndert werden"
+	Vcl_Consts_SCannotShowModal,	L"A visible window cannot be converted to a modal window."
 	Vcl_Consts_SScrollBarRange,	L"Scrollbar property out of range"
 	Vcl_Consts_SPropertyOutOfRange,	L"%s property out of range"
 	Vcl_Consts_SMenuIndexError,	L"Menu index out of range"
@@ -728,7 +728,7 @@ BEGIN
 	Vcl_Consts_SInvalidImage,	L"Invalid image"
 	Vcl_Consts_SScanLine,	L"Scan line index out of range"
 	Vcl_Consts_SChangeIconSize,	L"Cannot change the size of an icon"
-	Vcl_Consts_SChangeWicSize,	L"Die Gr\x00F6\x00DFe einer WIC-Grafik kann nicht ver\x00E4ndert werden"
+	Vcl_Consts_SChangeWicSize,	L"The size of a WIC picture cannot be changed"
 	Vcl_Consts_SOleGraphic,	L"Invalid operation on TOleGraphic"
 	Vcl_Consts_SUnknownExtension,	L"Unknown picture file extension (.%s)"
 	Vcl_Consts_SUnknownClipboardFormat,	L"Clipboard format not supported"
@@ -743,10 +743,10 @@ BEGIN
 	Vcl_Consts_SInsertImage,	L"Picture cannot be inserted"
 	System_RTLConsts_SWinRTInstanceError,	L"Instance of class %s cannot be created"
 	System_RTLConsts_sObserverUnsupported,	L"Observer is not supported"
-	System_RTLConsts_sObserverMultipleSingleCast,	L"Der Observer-Kollektion k\x00F6nnen nicht mehrere Einfach-Typumwandlungs-Observer hinzugef\x00FCgt werden"
-	System_RTLConsts_sObserverNoInterface,	L"Das Objekt implementiert das Observer-Interface nicht"
-	System_RTLConsts_sObserverNoSinglecastFound,	L"Der Observer-Kollektion wurde kein Einfach-Typumwandlungs-Observer mit der ID %d hinzugef\x00FCgt"
-	System_RTLConsts_sObserverNoMulticastFound,	L"Der Observer-Kollektion wurde kein Mehrfach-Typumwandlungs-Observer mit der ID %d hinzugef\x00FCgt"
+	System_RTLConsts_sObserverMultipleSingleCast,	L"Multiple single cast observers cannot be added to observer collection"
+	System_RTLConsts_sObserverNoInterface,	L"The object does not implement the observer interface"
+	System_RTLConsts_sObserverNoSinglecastFound,	L"No single cast observer with ID %d found in collection"
+	System_RTLConsts_sObserverNoMulticastFound,	L"No multi cast observer with ID %d found in collection"
 	System_RTLConsts_sObserverNotAvailable,	L"Observer is not available"
 	System_RTLConsts_SInvalidDateString,	L"Invalid date string: %s"
 	System_RTLConsts_SInvalidTimeString,	L"Invalid time string: %s"
@@ -775,27 +775,27 @@ BEGIN
 	System_RTLConsts_SWindows11,	L"Windows 11"
 	System_RTLConsts_SGenericItemNotFound,	L"Entry not found"
 	System_RTLConsts_SGenericDuplicateItem,	L"Duplicates are not allowed"
-	System_RTLConsts_SInsufficientRtti,	L"Unzureichende RTTI zur Unterst\x00FCtzung dieser Operation verf\x00FCgbar"
-	System_RTLConsts_SParameterCountMismatch,	L"Parameteranzahl stimmt nicht \x00FCberein"
-	System_RTLConsts_SNonPublicType,	L"Typ '%s' ist im interface-Abschnitt einer Unit nicht deklariert"
-	System_RTLConsts_SByRefArgMismatch,	L"VAR- und OUT-Argumente m\x00FCssen exakt mit dem Parametertyp \x00FCbereinstimmen"
-	System_RTLConsts_SPropIsReadOnly,	L"Eigenschaft '%s' ist schreibgesch\x00FCtzt"
-	System_RTLConsts_SPropIsWriteOnly,	L"Eigenschaft '%s' kann nur geschrieben werden"
-	System_RTLConsts_SInvalidRttiDestroy,	L"RTTI-Objekte k\x00F6nnen nicht manuell vom Anwendungscode freigegeben werden"
-	System_RTLConsts_SServiceNotFound,	L"Angegebener Dienst f\x00FCr die Anmeldeinformationen nicht gefunden"
+	System_RTLConsts_SInsufficientRtti,	L"Not enough RTTI for this operation"
+	System_RTLConsts_SParameterCountMismatch,	L"Parameter count not matched"
+	System_RTLConsts_SNonPublicType,	L"Type '%s' is not declared in the interface-Abschnitt of a unit"
+	System_RTLConsts_SByRefArgMismatch,	L"VAR- and OUT-arguments must match the parameter type"
+	System_RTLConsts_SPropIsReadOnly,	L"Property '%s' is write-protected"
+	System_RTLConsts_SPropIsWriteOnly,	L"Property '%s' can only be written"
+	System_RTLConsts_SInvalidRttiDestroy,	L"RTTI objects cannot be freed through source code"
+	System_RTLConsts_SServiceNotFound,	L"Service for login information not found"
 	System_RTLConsts_SVersionStr,	L"%s (Version %d.%d, Build %d, %5:s)"
 	System_RTLConsts_SSPVersionStr,	L"%s Service Pack %4:d (Version %1:d.%2:d, Build %3:d, %5:s)"
 	System_RTLConsts_SVersion32,	L"32 bit edition"
 	System_RTLConsts_SVersion64,	L"64 bit edition"
 	System_RTLConsts_SWindows,	L"Windows"
 	System_RTLConsts_SWindowsVista,	L"Windows Vista"
-	System_RTLConsts_sSpinCountOutOfRange,	L"SpinCount au\x00DFerhalb des Bereichs. Muss zwischen 0 und %d liegen"
+	System_RTLConsts_sSpinCountOutOfRange,	L"SpinCount outside range. It must be between 0 and %d"
 	System_RTLConsts_sTimespanTooLong,	L"TimeSpan too long"
-	System_RTLConsts_sInvalidTimespanDuration,	L"Die Dauer kann nicht zur\x00FCckgegeben werden, weil der absolute Wert den Wert von TTimeSpan.MaxValue \x00FCberschreitet"
+	System_RTLConsts_sInvalidTimespanDuration,	L"Duration cannot be returned because the absolute value exceeds TTimeSpan.MaxValue"
 	System_RTLConsts_sTimespanValueCannotBeNan,	L"Wert must not be NaN"
-	System_RTLConsts_sCannotNegateTimespan,	L"Negation des Minimalwertes einer Zeitspanne ist ung\x00FCltig"
+	System_RTLConsts_sCannotNegateTimespan,	L"Negation of mimimum value of a time range is invalid"
 	System_RTLConsts_sInvalidTimespanFormat,	L"Invalid TimeSpan format"
-	System_RTLConsts_sTimespanElementTooLong,	L"TimeSpan-Element zu lang"
+	System_RTLConsts_sTimespanElementTooLong,	L"TimeSpan element too long"
 	System_RTLConsts_SNoContext,	L"No context-sensitive help installed"
 	System_RTLConsts_SNoContextFound,	L"No help available for context %d"
 	System_RTLConsts_SNoIndex,	L"Unable to open Index"
@@ -805,20 +805,20 @@ BEGIN
 	System_RTLConsts_SNothingFound,	L"No help found for %s"
 	System_RTLConsts_SArgumentOutOfRange,	L"Argument outside of valid range"
 	System_RTLConsts_SArgumentNil,	L"Argument must not be Nil"
-	System_RTLConsts_SThreadExternalCheckTerminated,	L"CheckTerminated kann nicht f\x00FCr einen extern erstellten Thread aufgerufen werden"
-	System_RTLConsts_SThreadExternalSetReturnValue,	L"SetReturnValue kann nicht f\x00FCr einen extern erstellten Thread aufgerufen werden"
-	System_RTLConsts_SParamIsNil,	L"Parameter %s darf nicht Nil sein"
-	System_RTLConsts_SParamIsNegative,	L"Parameter %s darf kein negativer Wert sein"
-	System_RTLConsts_SInputBufferExceed,	L"Eingabepuffer f\x00FCr %s = %d, %s = %d \x00FCberschritten"
+	System_RTLConsts_SThreadExternalCheckTerminated,	L"CheckTerminated cannot be called for an external created thread"
+	System_RTLConsts_SThreadExternalSetReturnValue,	L"SetReturnValue cannot be called for an external created thread"
+	System_RTLConsts_SParamIsNil,	L"Parameter %s must not be Nil"
+	System_RTLConsts_SParamIsNegative,	L"Parameter %s must not be negative"
+	System_RTLConsts_SInputBufferExceed,	L"Input buffer of %s = %d, %s = %d exceeded"
 	System_RTLConsts_SInvalidCharsInPath,	L"Invalid character in file path"
 	System_RTLConsts_SInvalidCharsInFileName,	L"Invalid character in file name"
 	System_RTLConsts_SEmptyFileName,	L"Filename is empty"
 	System_RTLConsts_SPathTooLong,	L"The path is too long"
-	System_RTLConsts_SDriveNotFound,	L"Das Laufwerk wurde nicht gefunden"
+	System_RTLConsts_SDriveNotFound,	L"Drive not found"
 	System_RTLConsts_hNoFilterViewer,	L"No help viewer that supports filters"
 	System_RTLConsts_sArgumentInvalid,	L"Invalid argument"
-	System_RTLConsts_sInvalidStringAndObjectArrays,	L"Die L\x00E4nge von String- und Objekt-Arrays muss gleich sein"
-	System_RTLConsts_sSameArrays,	L"Quell- und Ziel-Arrays d\x00FCrfen nicht gleich sein"
+	System_RTLConsts_sInvalidStringAndObjectArrays,	L"Length of string and object array must be equal"
+	System_RTLConsts_sSameArrays,	L"Source and target arrays must be different"
 	System_RTLConsts_sNoConstruct,	L"Class %s is not intended to be constructed"
 	System_RTLConsts_sInvalidTimeoutValue,	L"Invalid value for timeout: %s"
 	System_RTLConsts_SReadError,	L"Stream read error"
@@ -836,7 +836,7 @@ BEGIN
 	System_RTLConsts_SThreadError,	L"Thread Error: %s (%d)"
 	System_RTLConsts_SThreadExternalTerminate,	L"Cannot terminate an externally created thread"
 	System_RTLConsts_SThreadExternalWait,	L"Cannot wait for an externally created thread"
-	System_RTLConsts_SThreadStartError,	L"Start kann f\x00FCr einen laufenden oder unterbrochenen Thread nicht aufgerufen werden"
+	System_RTLConsts_SThreadStartError,	L"Start cannot be called for a started or paused thread"
 	System_RTLConsts_SFCreateErrorEx,	L"Cannot create file ""%s"". %s"
 	System_RTLConsts_SFOpenErrorEx,	L"Cannot open file ""%s"". %s"
 	System_RTLConsts_SInvalidImage,	L"Invalid stream format"
