--- a/ENU/SpaceMission_DRC.rc
+++ b/ENU/SpaceMission_DRC.rc
@@ -548,7 +548,7 @@ BEGIN
 	Vcl_EdgeConst_SWebViewFailure,	L"Edge-Browser control cannot be created"
 	Vcl_EdgeConst_SNoWebView,	L"WebView2 control is not initialized"
 	IEConst_sNotSupportedByEdge,	L"Action not supported by Edge WebView2 control"
-	System_RegularExpressionsConsts_SRegExMissingExpression,	L"Ein in RegEx angegebener regul\x00E4rer Ausdruck ist erforderlich"
+	System_RegularExpressionsConsts_SRegExMissingExpression,	L"A regular expression is required in RegEx"
 	System_RegularExpressionsConsts_SRegExExpressionError,	L"Error with regular expression at offset %d: %s"
 	System_RegularExpressionsConsts_SRegExStudyError,	L"Error while evaluating: %s"
 	System_RegularExpressionsConsts_SRegExMatchRequired,	L"Match required"
@@ -600,7 +600,7 @@ BEGIN
 	Vcl_Imaging_pnglang_EPNGHeaderNotPresentText,	L"This operation is not valid because the current image contains no valid header."
 	Vcl_Imaging_pnglang_EInvalidNewSize,	L"The new size provided for image resizing is invalid."
 	Vcl_Imaging_pnglang_EInvalidSpec,	L"The ""Portable Network Graphics"" could not be created because invalid image type parameters have being provided."
-	Vcl_Imaging_pnglang_EPNGInvalidBitDepthText,	L"Das PNG-Bild (Portable Network Graphics) konnte nicht geladen werden, weil das Bild eine ung\x00FCltige Bit-Tiefe verwendet."
+	Vcl_Imaging_pnglang_EPNGInvalidBitDepthText,	L"The PNG image (Portable Network Graphics) could not be loaded because the picture contains an invalid bit depth."
 	Vcl_Imaging_JConsts_sChangeJPGSize,	L"Cannot change the size of a JPEG image"
 	Vcl_Imaging_JConsts_sJPEGError,	L"JPEG error #%d"
 	Vcl_Imaging_JConsts_sJPEGImageFile,	L"JPEG Image File"
@@ -611,9 +611,9 @@ BEGIN
 	Vcl_Imaging_pnglang_EPngInvalidCRCText,	L"This ""Portable Network Graphics"" image is not valid because it contains invalid pieces of data (crc error)"
 	Vcl_Imaging_pnglang_EPNGInvalidIHDRText,	L"The ""Portable Network Graphics"" image could not be loaded because one of its main piece of data (ihdr) might be corrupted"
 	Vcl_Imaging_pnglang_EPNGMissingMultipleIDATText,	L"This ""Portable Network Graphics"" image is invalid because it has missing image parts."
-	Vcl_Imaging_pnglang_EPNGZLIBErrorText,	L"Die Grafik konnte nicht entpackt werden, weil Teile der komprimierten Daten fehlerhaft sind. \r\nBeschreibung: "
+	Vcl_Imaging_pnglang_EPNGZLIBErrorText,	L"The graphic could not be decompressed because part of the compressed data is invalid. \r\nDescription: "
 	Vcl_Imaging_pnglang_EPNGInvalidPaletteText,	L"The ""Portable Network Graphics"" image contains an invalid palette."
-	Vcl_Imaging_pnglang_EPNGInvalidFileHeaderText,	L"Die gerade gelesene Datei ist kein g\x00FCltiges PNG-Bild (""Portable Network Graphics""), weil sie keinen g\x00FCltigen Header enth\x00E4lt. Diese Datei ist m\x00F6glicherweise besch\x00E4digt. Versuchen Sie, eine neue Version davon zu bekommen"
+	Vcl_Imaging_pnglang_EPNGInvalidFileHeaderText,	L"The read file is not a valid PNG picture (""Portable Network Graphics""), because it does not contain a valid header. The file is probably corrupt. Please try to receive a newer version of the file."
 	Vcl_Imaging_pnglang_EPNGIHDRNotFirstText,	L"This ""Portable Network Graphics"" image is not supported or it might be invalid.\r\n(IHDR chunk is not the first)"
 	Vcl_Imaging_pnglang_EPNGSizeExceedsText,	L"This PNG image (Portable Network Graphics) is not supported because width or height exceeds 65535 pixels."
 	Vcl_Imaging_pnglang_EPNGUnknownPalEntryText,	L"There is no such palette entry."
@@ -799,16 +799,16 @@ BEGIN
 	Vcl_Consts_SInsertImage,	L"Image cannot be inserted"
 	System_RTLConsts_SWinRTInstanceError,	L"Instance of class %s cannot be created"
 	System_RTLConsts_sObserverUnsupported,	L"Observer is not supported"
-	System_RTLConsts_sObserverMultipleSingleCast,	L"Der Observer-Kollektion k\x00F6nnen nicht mehrere Einfach-Typumwandlungs-Observer hinzugef\x00FCgt werden"
-	System_RTLConsts_sObserverNoInterface,	L"Das Objekt implementiert das Observer-Interface nicht"
-	System_RTLConsts_sObserverNoSinglecastFound,	L"Der Observer-Kollektion wurde kein Einfach-Typumwandlungs-Observer mit der ID %d hinzugef\x00FCgt"
-	System_RTLConsts_sObserverNoMulticastFound,	L"Der Observer-Kollektion wurde kein Mehrfach-Typumwandlungs-Observer mit der ID %d hinzugef\x00FCgt"
-	System_RTLConsts_sObserverNotAvailable,	L"Observer ist nicht verf\x00FCgbar"
+	System_RTLConsts_sObserverMultipleSingleCast,	L"Multiple single cast observers cannot be added to observer collection"
+	System_RTLConsts_sObserverNoInterface,	L"Object does not implement the Observer interface"
+	System_RTLConsts_sObserverNoSinglecastFound,	L"No single cast observer with ID %d found in Observer collection"
+	System_RTLConsts_sObserverNoMulticastFound,	L"No multi cast observer with ID %d found in Observer collection"
+	System_RTLConsts_sObserverNotAvailable,	L"Observer not available"
 	System_RTLConsts_SInvalidDateString,	L"Invalid date string: %s"
 	System_RTLConsts_SInvalidTimeString,	L"Invalid time string: %s"
 	System_RTLConsts_SInvalidOffsetString,	L"Invalid time offset string: %s"
 	System_RTLConsts_sMustWaitOnOneEvent,	L"Waiting for at least one event"
-	System_RTLConsts_sBeginInvokeDestroying,	L"BeginInvoke kann bei der Freigabe f\x00FCr TComponent nicht aufgerufen werden"
+	System_RTLConsts_sBeginInvokeDestroying,	L"BeginInvoke cannot be called for freeing TComponent"
 	Vcl_Consts_SInvalidBitmap,	L"Bitmap image is not valid"
 	Vcl_Consts_SInvalidIcon,	L"Icon image is not valid"
 	Vcl_Consts_SInvalidMetafile,	L"Metafile is not valid"
@@ -830,27 +830,27 @@ BEGIN
 	System_RTLConsts_SWindows10,	L"Windows 10"
 	System_RTLConsts_SWindows11,	L"Windows 11"
 	System_RTLConsts_SGenericItemNotFound,	L"Entry not found"
-	System_RTLConsts_SGenericDuplicateItem,	L"Duplikate nicht zul\x00E4ssig"
-	System_RTLConsts_SInsufficientRtti,	L"Unzureichende RTTI zur Unterst\x00FCtzung dieser Operation verf\x00FCgbar"
-	System_RTLConsts_SParameterCountMismatch,	L"Parameteranzahl stimmt nicht \x00FCberein"
-	System_RTLConsts_SNonPublicType,	L"Typ '%s' ist im interface-Abschnitt einer Unit nicht deklariert"
-	System_RTLConsts_SByRefArgMismatch,	L"VAR- und OUT-Argumente m\x00FCssen exakt mit dem Parametertyp \x00FCbereinstimmen"
-	System_RTLConsts_SPropIsReadOnly,	L"Eigenschaft '%s' ist schreibgesch\x00FCtzt"
-	System_RTLConsts_SPropIsWriteOnly,	L"Eigenschaft '%s' kann nur geschrieben werden"
-	System_RTLConsts_SInvalidRttiDestroy,	L"RTTI-Objekte k\x00F6nnen nicht manuell vom Anwendungscode freigegeben werden"
-	System_RTLConsts_SServiceNotFound,	L"Angegebener Dienst f\x00FCr die Anmeldeinformationen nicht gefunden"
+	System_RTLConsts_SGenericDuplicateItem,	L"Duplicates are not allowed"
+	System_RTLConsts_SInsufficientRtti,	L"Not enough RTTI for this operation"
+	System_RTLConsts_SParameterCountMismatch,	L"Paramter count must match"
+	System_RTLConsts_SNonPublicType,	L"Type '%s' is not delcared in the interface setion of a unit"
+	System_RTLConsts_SByRefArgMismatch,	L"VAR- und OUT- arguments must match the paramter type"
+	System_RTLConsts_SPropIsReadOnly,	L"Property '%s' is write-proteted"
+	System_RTLConsts_SPropIsWriteOnly,	L"Property '%s' can only be written"
+	System_RTLConsts_SInvalidRttiDestroy,	L"RTTI objects cannot be manually freed using application code"
+	System_RTLConsts_SServiceNotFound,	L"Service for login information not found"
 	System_RTLConsts_SVersionStr,	L"%s (Version %d.%d, Build %d, %5:s)"
 	System_RTLConsts_SSPVersionStr,	L"%s Service Pack %4:d (Version %1:d.%2:d, Build %3:d, %5:s)"
 	System_RTLConsts_SVersion32,	L"32 bit edition"
 	System_RTLConsts_SVersion64,	L"64 bit edition"
 	System_RTLConsts_SWindows,	L"Windows"
 	System_RTLConsts_SWindowsVista,	L"Windows Vista"
-	System_RTLConsts_sSpinCountOutOfRange,	L"SpinCount au\x00DFerhalb des Bereichs. Muss zwischen 0 und %d liegen"
-	System_RTLConsts_sTimespanTooLong,	L"TimeSpan zu lang"
-	System_RTLConsts_sInvalidTimespanDuration,	L"Die Dauer kann nicht zur\x00FCckgegeben werden, weil der absolute Wert den Wert von TTimeSpan.MaxValue \x00FCberschreitet"
-	System_RTLConsts_sTimespanValueCannotBeNan,	L"Wert darf nicht NaN"
-	System_RTLConsts_sCannotNegateTimespan,	L"Negation des Minimalwertes einer Zeitspanne ist ung\x00FCltig"
-	System_RTLConsts_sInvalidTimespanFormat,	L"Ung\x00FCltiges TimeSpan-Format"
+	System_RTLConsts_sSpinCountOutOfRange,	L"SpinCount outside range. It must be between 0 and %d"
+	System_RTLConsts_sTimespanTooLong,	L"TimeSpan too long"
+	System_RTLConsts_sInvalidTimespanDuration,	L"The duration cannot be returned, because the absolute value is exceeding TTimeSpan.MaxValue"
+	System_RTLConsts_sTimespanValueCannotBeNan,	L"Value must not be NaN"
+	System_RTLConsts_sCannotNegateTimespan,	L"Negation of minimum value of a time range is invalid"
+	System_RTLConsts_sInvalidTimespanFormat,	L"Invalid TimeSpam format"
 	System_RTLConsts_sTimespanElementTooLong,	L"TimeSpan element too long"
 	System_RTLConsts_SNoContext,	L"No context-sensitive help installed"
 	System_RTLConsts_SNoContextFound,	L"No help available for context %d"
