Splash screens multi-lingual and as bitmap
git-svn-id: https://svn.viathinksoft.com/svn/spacemission@97 2cb2a291-5fe7-405d-a812-557228769704

--- a/ENU/LevEdit_DRC.rc
+++ b/ENU/LevEdit_DRC.rc
@@ -987,11 +987,11 @@ END
 /* c:\program files (x86)\embarcadero\studio\23.0\lib\Win32\release\Dialogs.res */
 /* c:\program files (x86)\embarcadero\studio\23.0\lib\Win32\release\Buttons.res */
 /* c:\program files (x86)\embarcadero\studio\23.0\lib\Win32\release\SPIN.RES */
-/* C:\SVN\SpaceMission\LevSplash.DFM */
-/* C:\SVN\SpaceMission\LevSpeicherung.DFM */
-/* C:\SVN\SpaceMission\ComInfo.DFM */
-/* C:\SVN\SpaceMission\LevOptions.DFM */
-/* C:\SVN\SpaceMission\ComHilfe.dfm */
-/* C:\SVN\SpaceMission\LevMain.DFM */
-/* C:\SVN\SpaceMission\LevEdit.RES */
-/* C:\SVN\SpaceMission\LevEdit.drf */
+/* D:\SVN\SpaceMission\LevSplash.DFM */
+/* D:\SVN\SpaceMission\LevSpeicherung.DFM */
+/* D:\SVN\SpaceMission\ComInfo.DFM */
+/* D:\SVN\SpaceMission\LevOptions.DFM */
+/* D:\SVN\SpaceMission\ComHilfe.dfm */
+/* D:\SVN\SpaceMission\LevMain.DFM */
+/* D:\SVN\SpaceMission\LevEdit.RES */
+/* D:\SVN\SpaceMission\LevEdit.drf */
