--- a/ENU/SpaceMission_DRC.rc
+++ b/ENU/SpaceMission_DRC.rc
@@ -1041,13 +1041,13 @@ END
 
 /* c:\program files (x86)\embarcadero\studio\23.0\lib\Win32\release\Controls.res */
 /* c:\program files (x86)\embarcadero\studio\23.0\lib\Win32\release\Dialogs.res */
-/* C:\SVN\SpaceMission\GamSplash.DFM */
+/* D:\SVN\SpaceMission\GamSplash.DFM */
 /* c:\program files (x86)\embarcadero\studio\23.0\lib\Win32\release\Buttons.res */
 /* c:\program files (x86)\embarcadero\studio\23.0\lib\Win32\release\SPIN.RES */
-/* C:\SVN\SpaceMission\GamSpeicherung.DFM */
-/* C:\SVN\SpaceMission\ComInfo.DFM */
-/* C:\SVN\SpaceMission\GamCheat.DFM */
-/* C:\SVN\SpaceMission\ComHilfe.dfm */
-/* C:\SVN\SpaceMission\GamMain.DFM */
-/* C:\SVN\SpaceMission\SpaceMission.RES */
-/* C:\SVN\SpaceMission\SpaceMission.drf */
+/* D:\SVN\SpaceMission\GamSpeicherung.DFM */
+/* D:\SVN\SpaceMission\ComInfo.DFM */
+/* D:\SVN\SpaceMission\GamCheat.DFM */
+/* D:\SVN\SpaceMission\ComHilfe.dfm */
+/* D:\SVN\SpaceMission\GamMain.DFM */
+/* D:\SVN\SpaceMission\SpaceMission.RES */
+/* D:\SVN\SpaceMission\SpaceMission.drf */
